--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cookmixsip-backend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
