--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
+    "mongoose-paginate-v2": "^1.7.4",
     "morgan": "1.10.0"
   },
   "devDependencies": {
