--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
+    "express-rate-limit": "^7.1.4",
+    "helmet": "^7.1.0",
     "joi": "17.10.2",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
