--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "4.17.1",
     "express-rate-limit": "^7.1.4",
+    "gravatar": "^1.8.2",
     "helmet": "^7.1.0",
     "joi": "17.10.2",
     "joi-objectid": "^4.0.2",
@@ -23,7 +24,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
